--- a/assets/css/stylebs.css
+++ b/assets/css/stylebs.css
@@ -1,3 +1,4 @@
+
 .myname {
   font-size: 35px;
   font-family: "Montserrat", sans-serif;
@@ -38,6 +39,7 @@
 body {
   font-family: "Montserrat", sans-serif;
   color: #08157f;
+  background-image: url(../images/paperTile.jpg);
 }
 
 .delay1 {
@@ -73,6 +75,33 @@ body {
   animation-name: bounceIn;
 } */
 
+
+.vids{
+  width: 560px;
+  height: 360px;
+  
+}
+
+
+
+.slidePic{
+
+  width: 560px;
+    height: 360px;
+}
+
+.carousel-item{
+  margin-left:auto;
+  margin-right:auto;
+}
+
+.item{
+  width: 560px;
+  height: 250px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .portPics {}
 
 .mainpic {
@@ -100,8 +129,9 @@ body {
   padding-left: 90px;
   padding-right: 90px;
   padding-bottom: 90px;
-  margin-bottom: 40px;
+  margin-bottom: -30px;
   margin-top: -2px;
+  
 }
 
 h1 {
@@ -158,12 +188,18 @@ a.port-nav {
   padding-top: 87px;
 }
 
-.fluid-container.mainpic {
+.container.mainpic {
   background-image: url(../images/bluebckd4.jpg);
   max-width: 100%;
-  max-height: 100%;
+  /* max-height: 100%; */
+  height: 283px;
   padding-bottom: 1px;
   background-size: cover;
+}
+
+#effectPic{
+  margin-bottom: -191px;
+  margin-top: -203px;
 }
 
 .fluid-container.footer {
@@ -196,8 +232,12 @@ h2.about-me-text {
   margin-bottom: 40px;
 }
 
+#about-me{
+  background-color:white
+}
+
 h2.portfolio-text {
-  padding-top: 55px;
+  padding-top: 14px;
   color: white;
 }
 
@@ -270,15 +310,41 @@ iframe {
 }
 
 .about-col {
-  margin-top: 50px;
+  margin-top: 20px;
   margin-bottom: 50px;
+  width: 831px;
+  margin-left: -22px;
+
+}
+
+.about-col2{
+  margin-top: -10px;
+    width: 296px;
+    margin-left: 22px;
+
+}
+
+.about-col3{
+  margin-top: 1px;
+  margin-bottom: -27px;
+  width: 100%;
+  background-color: white;
+  
+}
+
+.contactArea{
+  background-color: white; 
 }
 
 .navbar-default-brand-color {
   color: red;
 }
 
-.portCircle {}
+.portCircle {
+  width: 200px;
+  height: 200px;
+
+}
 
 /* <======================iPad===========================> */
 
@@ -356,6 +422,26 @@ iframe {
     margin-left: -32px;
   }
   a {}
+}
+
+.parallax {
+  perspective: 1px;
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+.parallax__layer {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+.parallax__layer--base {
+  transform: translateZ(0);
+}
+.parallax__layer--back {
+  transform: translateZ(-1px);
 }
 
 /* 
